--- a/_includes/author-box.html
+++ b/_includes/author-box.html
@@ -1,5 +1,5 @@
 <section class="author-box">
-  <img src="{{site.baseurl}}/assets/img/{% if site.author-pic %}{{site.author-pic}}{% endif %}" alt="{{site.author}}" class="author-img">
+  <img src="{{site.baseurl}}/assets/img/victoriamawsonpic.jpeg" alt="{{site.author}}" class="author-img">
   <div class="author-desc">
     <h2>{{site.author}}</h2>
     <p>{{site.about-author}}</p>
@@ -9,10 +9,10 @@
       {% else %}
         <li class="email"><a href="mailto:victoriamawson12@gmail.com"><i class="fa fa-envelope-o" aria-hidden="true"></i></a></li>
       {% endif %}
-      {% if site.phone %}
+      <!-- {% if site.phone %}
         <li class="phone"><a href="tel:{{site.phone}}"><i class="fa fa-phone"></i></a></li>
       {% else %}
-        <li class="phone"><a href="tel:"><i class="fa fa-phone" aria-hidden="true"></i></a></li>
+        <li class="phone"><a href="tel:"><i class="fa fa-phone" aria-hidden="true"></i></a></li> -->
       {% endif %}
       {% if site.website %}
         <li class="website"><a href="http://{{site.website}}" target="_blank"><i class="fa fa-globe"></i></a></li>
