--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -17,9 +17,9 @@ layout: default
           <div class="page-date"><time datetime="{{page.date}}">{{page.date | date: '%Y, %b %d'}}</time></div>
         </div>
 
-        <h1 class="page.ingredients">{{page.ingredients}}</h1>
+        <!-- <h1 class="page.ingredients">{{page.ingredients}}</h1> -->
         {{page.content | markdownify}}
-        <h1 class="page.method">{{page.method}}</h1>
+        <!-- <h1 class="page.method">{{page.method}}</h1> -->
 
         <div class="page-footer">
           <div class="page-tag">
